# TGameEngine

./: .gitignore  CMakeLists.txt
include/: display.h  engine.h  globals.h  logger.h  physics.h  renderer.h  templates.h  vectors.h
src/: display.cpp  engine.cpp  globals.cpp  logger.cpp  main.cpp  physics.cpp  renderer.cpp  templates.cpp  vectors.cpp
